# CollegeHockeyBracket

./: .gitignore  README.md  cypress.config.js  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
bracketapp/: NBCacheClient.py  __init__.py  appsignal.py  config.py  globals.py  models.py  testing.db
bracketapp/home/: bracketUtils.py  helpers.py  home.py  queries.py
bracketapp/queries/: bracket_queries.py  correct_bracket_queries.py  default_bracket_queries.py  group_queries.py  team_qeuries.py  theme_queries.py  user_queries.py  user_settings_queries.py
bracketapp/routes/: admin.py  archive.py  auth.py  createbracket.py  deletebracket.py  editbracket.py  groups.py  health.py  index.py  leaderboard.py  mybrackets.py  preferences.py  profile.py  theme.py  user_settings.py  viewbracket.py
bracketapp/static/: esbuild.config.mjs  manifest.webmanifest  package-lock.json  package.json  rollup.config.mjs  webpack.config.js
bracketapp/templates/: add_team.html  admin.html  archive.html  archive_standings.html  base.html  create_group.html  default_bracket.html  delete_brackets.html  edit_bracket.html  edit_cbracket.html  email_login.html  includes.html  index.html  join_group.html  login.html  mobile-nav.html  my_brackets.html  navbar.html  password_request.html  password_reset.html  preferences.html  profile.html  signup.html  standings.html  test_edit_bracket.html  update_correct.html  view_bracket.html  view_group.html  (+1 more)
caddy/: Caddyfile  Dockerfile  caddy_start.sh
hooks/: increment_version.py
(+228 files in other folders)
