[project]
name = "collegehockeybracket"
version = "0.1.0"
description = "March Madness for College Hockey"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy-lite>=0.2.1",
    "gunicorn>=25.1.0",
    "psycopg2>=2.9.11",
    "pymemcache>=4.0.0",
    "redis>=7.3.0",
    "sentry-sdk>=2.54.0",
    "sqids>=0.5.2",
    "valkey>=6.1.1",
]
